--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,41 +1,36 @@
-version: "3.8"
+version: "3.9"
+
 services:
-  postgres:
-    image: postgres:15
-    environment:
-      POSTGRES_USER: info_user
-      POSTGRES_PASSWORD: info_pass
-      POSTGRES_DB: info_db
-    ports: ["5432:5432"]
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-
-  neo4j:
-    image: neo4j:5
-    environment:
-      NEO4J_AUTH: neo4j/neo4j_pass
-    ports: ["7474:7474","7687:7687"]
-    volumes:
-      - neo4jdata:/data
-
-  redis:
-    image: redis:7
-    ports: ["6379:6379"]
-
   api:
     build: ./api
-    depends_on: ["postgres", "neo4j", "redis"]
-    ports: ["8000:8000"]
+    container_name: info_api
+    ports:
+      - "8000:8000"
     environment:
-      DATABASE_URL: postgres://info_user:info_pass@postgres:5432/info_db
-      NEO4J_URL: bolt://neo4j:7687
-      NEO4J_USER: neo4j
-      NEO4J_PASS: neo4j_pass
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/info_db
+      - ML_STUB_URL=http://ml_stub:5000/classify
+    depends_on:
+      - db
+      - ml_stub
 
   ml_stub:
     build: ./ml_stub
-    ports: ["5000:5000"]
+    container_name: info_ml_stub
+    ports:
+      - "5000:5000"
+
+  db:
+    image: postgres:14
+    container_name: info_db
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: info_db
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
 volumes:
-  pgdata:
-  neo4jdata:
+  postgres_data:
